--- a/app/views/labels/index.html.erb
+++ b/app/views/labels/index.html.erb
@@ -13,9 +13,9 @@
     <div class="inline-block min-w-full shadow rounded-lg overflow-hidden">
       <table class="min-w-full leading-normal">
         <thead>
-          <tr class="border-b-2 border-gray-200 bg-gray-100">
-            <th class="px-5 py-3 text-xs font-semibold text-gray-600 uppercase tracking-wider text-center">標籤</th>
-            <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-100 text-xs font-semibold text-gray-600 uppercase tracking-wider">動作</th>
+          <tr class="border-b-2 border-gray-200 bg-gray-200">
+            <th class="px-5 py-3 text-md font-semibold text-gray-600 uppercase tracking-wider text-center">標籤</th>
+            <th class="px-5 py-3 border-b-2 border-gray-200 bg-gray-200 text-md font-semibold text-gray-600 uppercase tracking-wider">動作</th>
           </tr>
         </thead>
         <tbody>
