--- a/app/views/letters/partial/_navbar.html.erb
+++ b/app/views/letters/partial/_navbar.html.erb
@@ -58,7 +58,7 @@
 
 <%# sidebar %>
 <div class="flex overflow-hidden bg-white pt-16 w-4/12">
-  <aside id="sidebar" class="lg:flex hidden fixed z-20 h-full top-0 left-0 pt-16 flex-shrink-0 flex-col w-64 transition-width duration-75 backdrop-sepia bg-opacity-60 bg-gray-500" >
+  <aside id="sidebar" class="lg:flex hidden fixed z-20 h-full top-0 left-0 pt-16 flex-shrink-0 flex-col w-64 transition-width duration-75 backdrop-sepia bg-opacity-60" >
     <div class="h-screen relative flex-1 flex flex-col min-h-0 border-r border-gray-200 bg-white pt-0">
       <div class="flex-1 flex flex-col pt-5 pb-4 overflow-y-auto">
         <div class="flex-1 px-3 bg-white divide-y space-y-1">
