--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
     <%=javascript_include_tag "https://www.authy.com/form.authy.min.js" %>
     <%=stylesheet_link_tag "https://www.authy.com/form.authy.min.css" %>
+    <link rel = "shortcut icon" href="/yi_logo.svg" >
+    <link rel = "bookmark" href="/yi_logo.svg" >
   </head>
   <body>
     <p class="notice"><%= notice %></p>
