fix:svg display

--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -78,7 +78,7 @@
                   <div class="w-full">
                     <%= link_to letter_path(letter.id) do %>
                       <div class="w-full flex justify-items-center">
-                        <div class="w-1/5 p-4 items-center space-x-4 text-base font-semibold text-gray-900 truncate">
+                        <div class="w-48 p-4 items-center space-x-4 text-base font-semibold text-gray-900 truncate">
                           <%= letter.recipient %>
                         </div>
                         <div class="flex p-4 text-base text-gray-900 overflow-hidden truncate max-w-sm md:max-w-lg">
