--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -86,13 +86,15 @@
                           <% end %>
                         </div>
                         <div class="w-4/6 flex p-4 text-base text-gray-900 overflow-hidden truncate max-w-sm md:max-w-lg">
-                          <% letter.labels.each do |label|%>
-                            <div class="bg-yellow-500 border rounded-md mx-1 px-1">
-                              <%= label.title %>
+                          <div class="flex flex-nowrap">
+                            <% letter.labels.each do |label|%>
+                              <div class="bg-yellow-500 border rounded-md mx-1 px-1">
+                                <%= label.title %>
+                              </div>
+                            <% end %>
+                            <div class="mr-6">
+                              <%= letter.subject %> -
                             </div>
-                          <% end %>
-                          <div class="mr-6">
-                            <%= letter.subject %> -
                           </div>
                           <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
                             <%= letter.content%>
