--- a/app/views/letters/partial/_email_content.html.erb
+++ b/app/views/letters/partial/_email_content.html.erb
@@ -97,8 +97,8 @@
                             </div>
                           </div>
                           <div class="h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate overflow-hidden overflow-ellipsis whitespace-nowrap">
-                            <%= letter.content%>
-                            <%= letter.body %>
+                            <%= letter_preview_body(letter.body) %>
+                            <%= letter_preview_body(letter.content) %>
                           </div>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 whitespace-nowrap">
