--- a/app/views/letters/sendmail.html.erb
+++ b/app/views/letters/sendmail.html.erb
@@ -93,8 +93,7 @@
                             </div>
                           </div>
                           <div class="max-h-6 font-light max-w-sm xl:max-w-screen-md 2xl:max-w-screen-lg truncate">
-                            <%= letter.content %>
-                            <%= letter.body %>
+                            <%= letter_preview_body(letter.content) %>
                           </div>
                         </div>
                         <div class="ml-auto p-4 pr-10 text-base font-normal text-gray-900 whitespace-nowrap">
